added sop limits config
